<resources>
    <string name="app_name">My Fit App</string>
    <string name="next">Next</string>
    <string name="Register">Register</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Back">Back</string>
    <string name="Lose_weight">Lose weight</string>
    <string name="Maintain_weight">Maintain weight</string>
    <string name="Gain_weight">Gain weight</string>
    <string name="what_is_your_goal">What is your goal ?</string>
    <string name="not_very_active">Not Very Active</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="active">Active</string>
    <string name="very_active">Very Active</string>
    <string name="how_active_are_you">How active are you ?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="current_weight">Current weight</string>
    <string name="height">Height</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="year">Year of Birth</string>
    <string name="cm">cm</string>
    <string name="kilos">kilos</string>
    <string name="hey">Hey</string>
    <string name="goal">Your daily goal is :</string>
    <string name="fettle">How u feeling</string>
    <string name="good">Good</string>
    <string name="normal">Normal</string>
    <string name="awesome">Awesome</string>
    <string name="bmi">BMI</string>
    <string name="eat">EatSomething</string>
    <string name="Logout">Logout</string>
    <string name="Scanner">Scanner</string>
    <string name="new_weight">New weight?</string>
    <string name="new_height">New height ?</string>
    <string name="update">Update</string>
    <string name="your_new_height">Your new height</string>
    <string name="your_new_weight">Your new weight</string>
    <string name="qrbt">qrbt</string>
    <string name="Name">ProductText</string>
    <string name="Kcal">Kcal</string>
    <string name="Fat">Fat</string>
    <string name="Carbs">Carbs</string>
    <string name="Sugar">Sugar</string>
    <string name="Weight">Weight</string>
    <string name="getdata">GetData</string>
    <string name="newproduct">NewProduct</string>
    <string name="addproduct">AddProduct</string>
    <string name="Main">Main</string>
</resources>